--- a/Build a Random Quote Machine/index.html
+++ b/Build a Random Quote Machine/index.html
@@ -7,14 +7,14 @@
     <title>Random Quote Machine</title>
 </head>
 <body>
+    <main id="main-box">
+    </main>
     
-    <div id="like_button_container"></div>
-
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     
     <!-- Load our React component. -->
-    <script src="like_button.js"></script>
+    <script src="quotes.js"></script>
 </body>
 </html>
