--- a/Build a Random Quote Machine/index.html
+++ b/Build a Random Quote Machine/index.html
@@ -7,7 +7,7 @@
     <title>Random Quote Machine</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-light">
     <main class="container">
         <div id="main-box" class="row">
         </div>
