--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Calculator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    
+    <main class="container">
+        <div class="row my-3">
+            <div class="col">
+                <button class="btn btn-primary w-100">7</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">8</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">9</button>
+            </div>
+        </div>
+        <div class="row my-3">
+            <div class="col">
+                <button class="btn btn-primary w-100">4</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">5</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">6</button>
+            </div>
+        </div>
+        <div class="row my-3">
+            <div class="col">
+                <button class="btn btn-primary w-100">1</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">2</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">3</button>
+            </div>
+        </div>
+        <div class="row my-3">
+            <div class="col-8">
+                <button class="btn btn-primary w-100">0</button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100">.</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
