--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -11,43 +11,21 @@
     <main class="container">
         <div class="row my-3">
             <div class="col">
-                <button class="btn btn-primary w-100">7</button>
+            </div>
+            <div class="col-6 d-flex bg-warning flex-row">
+                <button class="btn btn-secondary">7</button>
+                <button class="btn btn-secondary">8</button>
+                <button class="btn btn-secondary">9</button>
+                <button class="btn btn-secondary">4</button>
+                <button class="btn btn-secondary">5</button>
+                <button class="btn btn-secondary">6</button>
+                <button class="btn btn-secondary">1</button>
+                <button class="btn btn-secondary">2</button>
+                <button class="btn btn-secondary">3</button>
+                <button class="btn btn-secondary">0</button>
+                <button class="btn btn-secondary">.</button>
             </div>
             <div class="col">
-                <button class="btn btn-primary w-100">8</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">9</button>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col">
-                <button class="btn btn-primary w-100">4</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">5</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">6</button>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col">
-                <button class="btn btn-primary w-100">1</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">2</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">3</button>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col-8">
-                <button class="btn btn-primary w-100">0</button>
-            </div>
-            <div class="col">
-                <button class="btn btn-primary w-100">.</button>
             </div>
         </div>
     </main>
