--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -12,10 +12,11 @@
         <div class="row my-3">
             <div class="col">
             </div>
-            <div class="col-6 d-flex bg-warning flex-row">
-                <button class="btn btn-secondary">7</button>
-                <button class="btn btn-secondary">8</button>
-                <button class="btn btn-secondary">9</button>
+            <div class="col-6 d-flex flex-row bg-warning p-2">
+                <button class="btn btn-secondary flex-fill">7</button>
+                <button class="btn btn-secondary flex-fill">8</button>
+                <button class="btn btn-secondary flex-fill">9</button>
+                <!--
                 <button class="btn btn-secondary">4</button>
                 <button class="btn btn-secondary">5</button>
                 <button class="btn btn-secondary">6</button>
@@ -24,6 +25,7 @@
                 <button class="btn btn-secondary">3</button>
                 <button class="btn btn-secondary">0</button>
                 <button class="btn btn-secondary">.</button>
+                -->
             </div>
             <div class="col">
             </div>
