--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -12,20 +12,71 @@
         <div class="row my-3">
             <div class="col">
             </div>
-            <div class="col-6 d-flex flex-row bg-warning p-2">
-                <button class="btn btn-secondary flex-fill">7</button>
-                <button class="btn btn-secondary flex-fill">8</button>
-                <button class="btn btn-secondary flex-fill">9</button>
-                <!--
-                <button class="btn btn-secondary">4</button>
-                <button class="btn btn-secondary">5</button>
-                <button class="btn btn-secondary">6</button>
-                <button class="btn btn-secondary">1</button>
-                <button class="btn btn-secondary">2</button>
-                <button class="btn btn-secondary">3</button>
-                <button class="btn btn-secondary">0</button>
-                <button class="btn btn-secondary">.</button>
-                -->
+            <div class="col-6">
+                <table class="table table-borderless">
+                    <tr>
+                        <td colspan="2">
+                            <button class="btn btn-secondary w-100">AC</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">/</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">X</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="btn btn-secondary w-100">7</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">8</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">9</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">-</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="btn btn-secondary w-100">4</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">5</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">6</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">+</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="btn btn-secondary w-100">1</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">2</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">3</button>
+                        </td>
+                        <td rowspan="2">
+                            <button class="btn btn-secondary w-100 h-100">=</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            <button class="btn btn-secondary w-100">0</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-secondary w-100">.</button>
+                        </td>
+                    </tr>
+                </table>
+
             </div>
             <div class="col">
             </div>
