--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -13,7 +13,7 @@
             <div class="col">
             </div>
             <div class="col-6">
-                <table class="table table-borderless">
+                <table class="table table-bordered border-primary">
                     <tr>
                         <td colspan="2">
                             <button class="btn btn-secondary w-100">AC</button>
@@ -53,7 +53,7 @@
                             <button class="btn btn-secondary w-100">+</button>
                         </td>
                     </tr>
-                    <tr>
+                    <tr class="h-100"> <!-- Importante para a altura de <td> -->
                         <td>
                             <button class="btn btn-secondary w-100">1</button>
                         </td>
@@ -63,7 +63,7 @@
                         <td>
                             <button class="btn btn-secondary w-100">3</button>
                         </td>
-                        <td rowspan="2">
+                        <td rowspan="2" class="h-100">
                             <button class="btn btn-secondary w-100 h-100">=</button>
                         </td>
                     </tr>
