--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -12,78 +12,9 @@
         <div class="row my-3">
             <div class="col">
             </div>
-            <div class="col-6">
-                <table class="table table-borderless bg-light shadow-lg">
-                    <tbody id="pointkey">
-                        <tr>
-                            <td colspan="4">
-                                <p class="bg-dark text-warning text-end display-4 p-2">0</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <button class="btn btn-danger w-100">AC</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-primary w-100 h-100">/</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-primary w-100 h-100">*</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">7</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">8</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">9</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-primary w-100 h-100">-</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">4</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">5</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">6</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-primary w-100 h-100">+</button>
-                            </td>
-                        </tr>
-                        <tr class="h-100"> <!-- Importante para a altura de <td> -->
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">1</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">2</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100 h-100">3</button>
-                            </td>
-                            <td rowspan="2" class="h-100">
-                                <button class="btn btn-success w-100 h-100">=</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <button class="btn btn-secondary w-100">0</button>
-                            </td>
-                            <td>
-                                <button class="btn btn-secondary w-100">.</button>
-                            </td>
-                        </tr>
-                    </tbody>
+            <div class="col-6 bg-light shadow-lg p-1">
+                <table id="calculator" class="table table-borderless mb-0">
                 </table>
-
             </div>
             <div class="col">
             </div>
