--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -28,7 +28,10 @@
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
+    <!-- Load Babel -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
     <!-- Load our React component. -->
-    <script src="calculator.js"></script>
+    <script src="calculator.js" type="text/babel"></script>
 </body>
 </html>
