--- a/Javascript Calculator/index.html
+++ b/Javascript Calculator/index.html
@@ -12,7 +12,7 @@
         <div class="row my-3">
             <div class="col">
             </div>
-            <div class="col-6 bg-light shadow-lg p-1">
+            <div class="col-6 col-xs-4 col-xl-3 bg-light shadow-lg p-1">
                 <table id="calculator" class="table table-borderless mb-0">
                 </table>
             </div>
