--- a/scrimba/P01/index.html
+++ b/scrimba/P01/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone@7.17.2/babel.min.js"></script>
 </head>
 <body>
     <div id="root"></div>
-    <script src="index.js" type="text/babel"></script>
+    <script src="index.js" type="text/babel" data-type="module"></script>
 </body>
 </html>
